fix position and visibility of header positioned image

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -100,7 +100,7 @@ h1 {
 
 h2 {
     font-size: 4.5rem;
-    line-height: 99.8px;
+    line-height: 1;
 }
 
 h3 {
