--- a/styles/sass/_mediaQuery.scss
+++ b/styles/sass/_mediaQuery.scss
@@ -1,11 +1,8 @@
 @media (max-width: 1210px) {
     // HOMEPAGE QUERIES
-    .headerImg {
-        top: 50%;
-    }
 
     .aboutUs ul li {
-        margin-top: 20%;
+        margin-top: 10%;
     }
 
     .features {
@@ -88,27 +85,17 @@
     }
 }
 
+@media (max-width: 940px) {
+    .headerImg {
+        max-width: 600px;
+    }
+}
+
 @media (max-width: 800px) {
-    .headerHome {
-        background-position-x: -300px;
-    }
-
-    .headerBlog {
-        background-position-x: -300px;
-    }
-
-    .headerContact {
-        background-position-x: -900px;
-    }
-
     header nav a {
         font-size: 1.5rem;
     }
-
-    h1 {
-        font-size: 5rem;
-    }
-
+    
     section {
         padding: 50px 0;
     }
@@ -220,5 +207,15 @@
 @media (max-width: 445px) {
     .aboutUs li a:first-child {
         display: none;
+    }
+}
+
+@media (max-height: 850px) {
+    .headerImg {
+        visibility: hidden;
+    }
+
+    main .aboutUs {
+        padding-top: 25px;
     }
 }
